# invisible_playwright

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-launch-failure.yml  02-site-or-action-bug.yml  03-stealth-detection.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: e2e.yml  firefox-launch-matrix.yml  release.yml  republish.yml  tests.yml  verify-assets.yml  verify-cloak.yml  webrtc-e2e.yml
docs/: pinning.md  typescript.md
examples/: basic.py  typescript.ts  with_proxy.py
scripts/: audit_cpt_realism.py  ci_drive_gate.py  gen_release_notes.py
src/invisible_playwright/: __init__.py  _geo.py  _headless.py  _proxy.py  _recaptcha_seed.py  _webgl_personas.py  async_api.py  cli.py  config.py  constants.py  download.py  launcher.py  prefs.py  sync_api.py
src/invisible_playwright/_fpforge/: __init__.py  _network.py  _sampler.py  profile.py
src/invisible_playwright/_fpforge/data/: cpt_audio_given_class.json  cpt_codec_given_class.json  cpt_hwc_given_class_tier.json  cpt_msaa_given_class.json  cpt_screen_given_class_tier.json  cpt_storage_given_class_tier.json  font_pool.json  webgl_gpu_pool.json  webgl_renderer_pool.json  win_hw_marginals.json
src/stealthfox/: __init__.py  _headless.py  async_api.py  cli.py  constants.py  download.py  launcher.py  sync_api.py
src/stealthfox/_fpforge/: __init__.py  _network.py  profile.py
src/stealthfox/_fpforge/data/: cpt_fonts_optional_given_class.json  cpt_hwc_given_class.json  cpt_hwc_given_class_tier.json  cpt_intra_tier_given_class.json  cpt_msaa_given_class_screen.json  cpt_screen_given_class.json  cpt_storage_given_class.json  ff_win_distributions.json  font_pool.json  prior_audio.json  priors_independent.json
src/stealthfox/data/: font-map.json
tests/: test_async_api.py  test_canvas_render_stealth.py  test_cli.py  test_cloak.py  test_constants.py  test_cross_origin_iframe.py  test_download.py  test_fingerprint_consistency.py  test_fingerprint_surface.py  test_geo.py  test_geoip_update.py  test_headless.py  test_imports.py  test_integration.py  test_launcher_config.py  test_launcher_helpers.py  test_mouse.py  test_pin.py  test_prefs.py  test_proxy.py  test_release_e2e.py  test_sampler.py  test_version.py  test_webgl_noise_active.py  test_webrtc_realness.py
tests/unit/: test_config_public.py
