[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stealthfox"
version = "0.1.0"
description = "Playwright wrapper for a patched Firefox with deterministic stealth profile."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "feder-cr", email = "85809106+feder-cr@users.noreply.github.com" }]
keywords = ["playwright", "firefox", "stealth", "anti-detect", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.40",
    "platformdirs>=4",
    "requests>=2.31",
    "tqdm>=4.66",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3", "responses>=0.24"]

[project.scripts]
stealthfox = "stealthfox.cli:main"

[project.urls]
Homepage = "https://github.com/feder-cr/stealthfox"
Issues = "https://github.com/feder-cr/stealthfox/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stealthfox"]

[tool.hatch.build.targets.wheel.force-include]
"src/stealthfox/data" = "stealthfox/data"
"src/stealthfox/_fpforge/data" = "stealthfox/_fpforge/data"
